--- a/tg_bot/langs/en.yaml
+++ b/tg_bot/langs/en.yaml
@@ -1,7 +1,7 @@
 # Language name in their native
 language: "English 🇺🇲"
-# name of people(s) who worked on this translation
-authors: "@dank_as_fuck"
+# name of people(s) who re-worked on this translation
+authors: "@LustPriest"
 
 # languages
 curr_chat_lang: "Hey. Your current language is {}, select the one you want from the buttons below :)"
@@ -9,29 +9,25 @@ set_chat_lang: "Great, {} it is from now on!"
 
 
 pm_start_text: |
-   Hi {}, my name is {}!
-   I am an Anime themed group management bot with some fun extras ;)
-   Try the buttons below to know how I work.
+   Hey There! I'm *{dispatcher.bot.first_name}* 
+   [✧]({}) I'm Here To Help You Manage \n    Your Groups!
+   [✧]({}) Hit /help To Find Out More About\n    How To Use Me.
+   Join My [Support Chat](t.me/{}) To Get Information & Help.
    
-grp_start_text: "Hi, I'm Kigyo."
+grp_start_text: "Hmm??"
 
 pm_help_text: |
-   Hello there! My name is *Kigyo*. A part of *Eagle Union*.
-   I'm a modular group management bot with a few fun extras! Have a look at the following for an idea of some of
-   the things I can help you with.
-   *Main* commands available:
-    • /start: Starts me, can be used to check I'm alive or not.
-    • /help: PM's you this message.
-    • /language: Change bot language.
-    • /settings:
-      - in PM: will send you your settings for all supported modules.
-      - in a group: will redirect you to pm, with all that chat's settings.
-    Click on the buttons below to get documentation about specific modules!
-
-add_bot_to_group_btn: "Add Kigyo"
-support_chat_link_btn: "Support"
-updates_channel_link_btn: "Updates"
-src_btn: "Source code"
+   *Helpful Commands:*
+   ✧ /start: Starts me! You've probably
+        already used this.
+   ✧ /help: Sends this message; I'll tell
+        you more about myself!
+   ✧ /language: Change bot language.
+   ✧ /settings: 
+      ∘ in PM: will send you your settings
+        for all supported modules.
+      ∘ in a GROUP: will redirect you to pm,
+        with all that chat's settings.
 
 admin_help: |
    • `/admins`*:* list of admins in the chat
@@ -43,11 +39,6 @@ admin_help: |
    • `/promote`*:* promotes the user replied to
    • `/demote`*:* demotes the user replied to
    • `/title <title here>`*:* sets a custom title for an admin that the bot promoted
-
-afk_help: |
-   - /afk <reason>: mark yourself as AFK(away from keyboard).
-   - brb <reason>: same as the afk command - but not a command.
-   When marked as AFK, any mentions will be replied to with a message to say you're not available!
 
 anilist_help: |
     *AniList*
@@ -112,12 +103,6 @@ blacklist_help: |
      • `/unblacklist <triggers>`*:* Remove triggers from the blacklist. Same newline logic applies here, so you can remove multiple triggers at once.
      • `/blacklistmode <off/del/warn/ban/kick/mute/tban/tmute>`*:* Action to perform when someone sends blacklisted words.
 
-cleaner_help: |
-    - /cleanbluetext <on/off/yes/no> - clean commands after sending
-    - /ignorecleanbluetext <word> - prevent auto cleaning of the command
-    - /unignorecleanbluetext <word> - remove prevent auto cleaning of the command
-    - /listcleanbluetext - list currently whitelisted commands
-
 connections_help: |
     - /connect: connect a chat (Can be done in a group by /connect or /connect <chat id> in PM)
     - /connection: list connected chats
@@ -156,33 +141,6 @@ disable_help: |
      • /enable <cmd name>: Enable that command
      • /disable <cmd name>: Disable that command
      • /listcmds: List all possible disablable commands
-
-feds_help: |
-    Ah, group management. Everything is fun, until the spammer starts entering your group, and you have to block it. Then you need to start banning more, and more, and it hurts.
-    But then you have many groups, and you don't want this spammer to be in one of your groups - how can you deal? Do you have to manually block it, in all your groups?
-
-    No longer! With Federation, you can make a ban in one chat overlap with all other chats.
-    You can even designate admin federations, so your trusted admin can ban all the chats you want to protect.
-
-    *Commands Available*:
-
-     • /newfed <fedname>: Create a new Federation with the name given. Users are only allowed to have one Federation. This method can also be used to rename the Federation. (max. 64 characters)
-     • /delfed: Delete your Federation, and any information related to it. Will not cancel blocked users.
-     • /fedinfo <FedID>: Information about the specified Federation.
-     • /joinfed <FedID>: Join the current chat to the Federation. Only chat owners can do this. Every chat can only be in one Federation.
-     • /leavefed <FedID>: Leave the Federation given. Only chat owners can do this.
-     • /fpromote <user>: Promote Users to give fed admin. Fed owner only.
-     • /fdemote <user>: Drops the User from the admin Federation to a normal User. Fed owner only.
-     • /fban <user>: Prohibits users from all federations where this chat takes place, and executors have control over.
-     • /unfban <user>: Cancel User from all federations where this chat takes place, and that the executor has control over.
-     • /setfrules: Arrange Federation rules.
-     • /frules: See Federation regulations.
-     • /chatfed: See the Federation in the current chat.
-     • /fedadmins: Show Federation admin.
-     • /fbanlist: Displays all users who are victimized at the Federation at this time.
-     • /fednotif <on / off>: Federation settings not in PM when there are users who are fban / unfban.
-     • /fedchats: Get all the chats that are connected in the Federation.
-     • /importfbans: Reply to the Federation backup message file to import the banned list to the Federation now. (disabled for now.)
 
 fun_help: |
      • /runs: reply a random string from an array of replies.
@@ -227,6 +185,7 @@ gtranslate_help: |
      • `/tl <source>//<dest>`: translates from <source> to <lang>.
      eg: `/tl ja//en`: translates from Japanese to English.
      • `/langs`: get a list of supported languages for translation.
+
 locks_help: |
      Do stickers annoy you? or want to avoid people sharing links? or pictures?
      You're in the right place!
