--- a/tg_bot/langs/en.yaml
+++ b/tg_bot/langs/en.yaml
@@ -14,7 +14,7 @@ pm_start_text: |
    [✧]({}) Hit /help To Find Out More About\n    How To Use Me.
    Join My [Support Chat](t.me/{}) To Get Information & Help.
    
-grp_start_text: "Hmm??"
+grp_start_text: "Hmm?"
 
 pm_help_text: |
    *Helpful Commands:*
@@ -29,6 +29,11 @@ pm_help_text: |
       ∘ in a GROUP: will redirect you to pm,
         with all that chat's settings.
 
+add_bot_to_group_btn: "Add Kigyo"
+support_chat_link_btn: "Support"
+updates_channel_link_btn: "Updates"
+src_btn: "Source code"
+
 admin_help: |
    • `/admins`*:* list of admins in the chat
 
@@ -39,6 +44,11 @@ admin_help: |
    • `/promote`*:* promotes the user replied to
    • `/demote`*:* demotes the user replied to
    • `/title <title here>`*:* sets a custom title for an admin that the bot promoted
+
+afk_help: |
+   - /afk <reason>: mark yourself as AFK(away from keyboard).
+   - brb <reason>: same as the afk command - but not a command.
+   When marked as AFK, any mentions will be replied to with a message to say you're not available!
 
 anilist_help: |
     *AniList*
@@ -103,6 +113,12 @@ blacklist_help: |
      • `/unblacklist <triggers>`*:* Remove triggers from the blacklist. Same newline logic applies here, so you can remove multiple triggers at once.
      • `/blacklistmode <off/del/warn/ban/kick/mute/tban/tmute>`*:* Action to perform when someone sends blacklisted words.
 
+cleaner_help: |
+    - /cleanbluetext <on/off/yes/no> - clean commands after sending
+    - /ignorecleanbluetext <word> - prevent auto cleaning of the command
+    - /unignorecleanbluetext <word> - remove prevent auto cleaning of the command
+    - /listcleanbluetext - list currently whitelisted commands
+
 connections_help: |
     - /connect: connect a chat (Can be done in a group by /connect or /connect <chat id> in PM)
     - /connection: list connected chats
@@ -141,6 +157,33 @@ disable_help: |
      • /enable <cmd name>: Enable that command
      • /disable <cmd name>: Disable that command
      • /listcmds: List all possible disablable commands
+
+feds_help: |
+    Ah, group management. Everything is fun, until the spammer starts entering your group, and you have to block it. Then you need to start banning more, and more, and it hurts.
+    But then you have many groups, and you don't want this spammer to be in one of your groups - how can you deal? Do you have to manually block it, in all your groups?
+
+    No longer! With Federation, you can make a ban in one chat overlap with all other chats.
+    You can even designate admin federations, so your trusted admin can ban all the chats you want to protect.
+
+    *Commands Available*:
+
+     • /newfed <fedname>: Create a new Federation with the name given. Users are only allowed to have one Federation. This method can also be used to rename the Federation. (max. 64 characters)
+     • /delfed: Delete your Federation, and any information related to it. Will not cancel blocked users.
+     • /fedinfo <FedID>: Information about the specified Federation.
+     • /joinfed <FedID>: Join the current chat to the Federation. Only chat owners can do this. Every chat can only be in one Federation.
+     • /leavefed <FedID>: Leave the Federation given. Only chat owners can do this.
+     • /fpromote <user>: Promote Users to give fed admin. Fed owner only.
+     • /fdemote <user>: Drops the User from the admin Federation to a normal User. Fed owner only.
+     • /fban <user>: Prohibits users from all federations where this chat takes place, and executors have control over.
+     • /unfban <user>: Cancel User from all federations where this chat takes place, and that the executor has control over.
+     • /setfrules: Arrange Federation rules.
+     • /frules: See Federation regulations.
+     • /chatfed: See the Federation in the current chat.
+     • /fedadmins: Show Federation admin.
+     • /fbanlist: Displays all users who are victimized at the Federation at this time.
+     • /fednotif <on / off>: Federation settings not in PM when there are users who are fban / unfban.
+     • /fedchats: Get all the chats that are connected in the Federation.
+     • /importfbans: Reply to the Federation backup message file to import the banned list to the Federation now. (disabled for now.)
 
 fun_help: |
      • /runs: reply a random string from an array of replies.
@@ -312,16 +355,6 @@ rules_help: |
        *Admins only:*
       • `/setrules <your rules here>`*:* set the rules for this chat.
       • `/clearrules`*:* clear the rules for this chat.
-
-tagger_help: |
-   Tagger is an essential feature to mention all subscribed members in the group. Any chat members can subscribe to tagger.
-   • `/tagme`*:* registers to the chat tag list.
-   • `/untagme`*:* unsubscribes from the chat tag list.
-   Admin only:
-   • `/tag <userhandle>`*:* add a user to chat tag list. (via handle, or reply)
-   • `/untag <userhandle>`*:* remove a user to chat tag list. (via handle, or reply)
-   • `/tagall`*:* mention all subscribed members.
-   • `/untagall`*:* clears all subscribed members.
 
 userinfo_help: |
       - /setbio <text>: while replying, will save another user's bio
