--- a/tg_bot/langs/en.yaml
+++ b/tg_bot/langs/en.yaml
@@ -397,6 +397,7 @@ warns_help: |
       • `/strongwarn <on/yes/off/no>`*:* If set to on, exceeding the warn limit will result in a ban. Else, will just kick.
 
 greetings_help: |
+
       *Admins only:*
        • `/welcome <on/off>`*:* enable/disable welcome messages.
        • `/welcome`*:* shows current welcome settings.
@@ -414,6 +415,50 @@ greetings_help: |
 
       *Welcome markdown:*
        • `/welcomehelp`*:* view more formatting information for custom welcome/goodbye messages.
+
+greetings_format_help: |
+    *Formatting:*
+
+    {} supports a large number of formatting options to make your messages more expressive. Take a look!
+
+greetings_filling_help: |
+    *Fillings:*
+
+    You can also customise the contents of your message with contextual data. For example, you could mention a user by name in the welcome message, or mention them in a filter!
+
+    *Supported Fillings:*
+    • `{first}`: The user's first name.
+    • `{last}`: The user's last name.
+    • `{fullname}`: The user's full name.
+    • `{username}`: The user's username. If they don't have one, mentions the user instead.
+    • `{mention}`: Mentions the user with their firstname.
+    • `{id}`: The user's ID.
+    • `{count}`: this represents the user's member number.
+    • `{chatname}`: The chat's name.
+
+greetings_random_help: |
+    *Random Content:*
+
+    Another thing that can be fun, is to randomise the contents of a message. Make things a little more personal by changing welcome messages, or changing notes!
+
+    *How to use random contents:*
+    • %%%: This separator can be used to add "random" replies to the bot.
+
+    *For example:*
+    `hello
+    %%%
+    how are you`
+    This will randomly choose between sending the first message, "hello", or the second message, "how are you". Use this to make {} feel a bit more customised! (only works in notes/filters/greetings).
+
+    *Example welcome message:*
+    • Every time a new user joins, they'll be presented with one of the three messages shown here.
+    -> `/setwelcome
+    hello there {first}!
+    %%%
+    Ooooh, {first} is in the house!
+    %%%
+    Welcome to the group, {first}!`
+
 
 nation_help: |
       • /eagle - Lists all Eagle Union members.
