--- a/tg_bot/langs/en.yaml
+++ b/tg_bot/langs/en.yaml
@@ -448,7 +448,7 @@ greetings_random_help: |
     `hello
     %%%
     how are you`
-    This will randomly choose between sending the first message, "hello", or the second message, "how are you". Use this to make {} feel a bit more customised! (only works in notes/filters/greetings).
+    This will randomly choose between sending the first message, "hello", or the second message, "how are you". Use this to make {first_name} feel a bit more customised! (only works in notes/filters/greetings).
 
     *Example welcome message:*
     • Every time a new user joins, they'll be presented with one of the three messages shown here.
