--- a/tg_bot/langs/en.yaml
+++ b/tg_bot/langs/en.yaml
@@ -101,17 +101,31 @@ bans_help: |
     • /unban <userhandle>: unbans a user. (via handle, or reply)
     • /kick <userhandle>: kick a user out of the group, (via handle, or reply)
 
+bl_help: |
+   *Trigger*: this blacklists are used to stop certain triggers from being said in a group. Any time the trigger is mentioned, the message will immediately be deleted. A good combo is sometimes to pair this up with warn filters!
+
+   *Sticker*: this blacklists is used to stop certain stickers. Whenever a sticker is sent, the message will be deleted immediately.
+
 blacklist_help: |
-    Blacklists are used to stop certain triggers from being said in a group. Any time the trigger is mentioned, the message will immediately be deleted. A good combo is sometimes to pair this up with warn filters!
-
-    *NOTE*: Blacklists do not affect group admins.
-
+    *CMD*:
      • `/blacklist`*:* View the current blacklisted words.
 
-    Admin only:
+    *Admin only*:
      • `/addblacklist <triggers>`*:* Add a trigger to the blacklist. Each line is considered one trigger, so using different lines will allow you to add multiple triggers.
      • `/unblacklist <triggers>`*:* Remove triggers from the blacklist. Same newline logic applies here, so you can remove multiple triggers at once.
      • `/blacklistmode <off/del/warn/ban/kick/mute/tban/tmute>`*:* Action to perform when someone sends blacklisted words.
+
+sblacklist_help: |
+    *CMD*:
+    • /sblacklist: See current blacklisted sticker.
+
+    *Only admin*:
+    • /addsblacklist <sticker link>: Add the sticker trigger to the black list. Can be added via reply sticker.
+    • /unsblacklist <sticker link>: Remove triggers from blacklist. The same newline logic applies here, so you can delete multiple triggers at once.
+    • /sblacklistmode <ban/tban/mute/tmute>: sets up a default action on what to do if users use blacklisted stickers. (`tmute seems broken right now`)
+
+    *Tip*:
+    • `<sticker link>` can be `https://t.me/addstickers/<sticker>` or just `<sticker>` or reply to the sticker message.
 
 cleaner_help: |
     • /cleanbluetext <on/off/yes/no> - clean commands after sending
